Fixed some layout issues

--- a/scss/modules.scss
+++ b/scss/modules.scss
@@ -238,7 +238,7 @@
             line-height: 1.4;
             color: $main-color;
             background: $off-white;
-            max-width: 700px;
+            max-width: 750px;
             font-size: 3rem;
             font-weight: 200;
             padding: 2rem;
